# wati

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
scripts/: test_webhook_live.py  webhook_test.sh
src/wati_agent/: __init__.py  __main__.py  config.py
src/wati_agent/agent/: __init__.py  agent.py  memory.py  prompts.py  tools.py
src/wati_agent/api/: __init__.py  base.py  client.py  client_v1.py  http.py  mock.py  models.py
src/wati_agent/cli/: chat.py
src/wati_agent/executor/: __init__.py  plan.py  rollback.py  validator.py
src/wati_agent/observability/: __init__.py  audit.py  logging.py
src/wati_agent/webhook/: __init__.py  app.py  models.py  slack.py  status_store.py
tests/: conftest.py
tests/test_agent/: test_memory.py  test_tools.py
tests/test_api/: test_mock.py  test_mock_segments.py
tests/test_cli/: test_helpers.py
tests/test_executor/: test_plan_executor.py  test_rollback.py  test_validator.py
tests/test_observability/: test_audit.py
tests/test_webhook/: test_app.py  test_models.py  test_slack.py  test_status_store.py
